refactor: 인기 프롬프트 목록 조회 로직 단순화
- PromptFinder에 findPopularPrompts(Page<PromptListResponse>) 메서드 추가
- PromptApi에서 인기 프롬프트 조회 시 DTO 변환 중복 제거
- 테스트 코드에 인기순 정렬 및 DTO 매핑 검증 케이스 추가